# yunbot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: faq.md  index.md  installation.md  quickstart.md
docs/advanced/: error-handling.md  event-matcher.md  logging.md
docs/api/: client.md  group.md  info.md  message.md  overview.md
docs/examples/: basic-bot.md  command-bot.md  group-manager.md
docs/guide/: client.md  configuration.md  events.md  messages.md
examples/: config.example.json  config.example.yaml  config_file_demo.py  full_example.py  test_config_file.py  test_logger_basic.py  test_output.json  test_output.yaml
tests/: __init__.py  test_config.py  test_message.py
yunbot/: __init__.py  adapter.py  bot.py  client.py  config.py  connection.py  event.py  exceptions.py  logger.py  matcher.py  message.py  store.py  utils.py
